# three-text-sphere

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html
docs/: ai_agent_instructions.md  architecture.md  index.html  status.md  three-text-sphere-6db8882530f0de85.js  three-text-sphere-6db8882530f0de85_bg.wasm
docs/snippets/three-text-sphere-9f514da47e4bb3a8/: inline0.js
documentation/: design.md  plan.md  prd.md  status.md
src/: lib.rs
