[package]
name = "three-text-sphere"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "WebGlRenderingContext",
    "console",
    "Performance",
] }
js-sys = "0.3"
gloo = { version = "0.11", features = ["timers", "utils"] }
gloo-render = "0.2"
log = "0.4"
wasm-logger = "0.2"

[profile.release]
lto = true
opt-level = "z"
